Kiro genearation